--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇨🇳 中国-16.12MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-550.3KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: 45.78.78.62, port: 38212, type: vmess, uuid: 5349d03e-7ef8-4aa1-e8a3-87d6f0fcd9c0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-483.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 捷克-1.71MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇬🇧 英国-2.34MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
-  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
