--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-483.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 捷克-1.71MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇬🇧 英国-2.34MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-16.12MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
+  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 捷克-1.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
