--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-16.12MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 台湾-10.09MB/s(Youtube:不良林), server: 61.222.202.140, port: 33792, type: vmess, uuid: e55cd182-01b0-4fb7-a510-363701a491c5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 61.222.202.140}}
+  - {name: 🇨🇳 中国-483.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇰🇷 韩国-5.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.27MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
